# Zith-Lang

./: .clang-format  .gitignore  .gitmodules  404.html  AGENTS.md  ARCH-COMPARISON.md  ARCH-PLAN.md  CHANGELOG.md  CMakeLists.txt  CNAME  CONTRIBUTING.md  GUIDE.md  NEXT_STEPS.md  PLAN-RESTRUCTURE.md  PLAN-WEVERYTHING.md  README.md  ROADMAP.md  STATUS.md  TODO-LOGIC-CHANGES.md  Zith-spec.md  ZithFlags.toml  changelog.html  changelog_2026-06-13.html  community.html  docs-architecture.md  dump_imports.py  fix.py  index.html  license  opencode.json  parse_wasm.js  patch.py  patch_css.py  patch_js.py  plan-fn-type-inference-implicit-return.md  robots.txt  sitemap.xml  test_arith.zith  wrangler.jsonc
.github/: dependabot.yml
.github/workflows/: build-artifact.yml  build-release.yml  ci.yml  clear-cache.yml  create-new-release.yml  deploy-docs.yml  update-package.yml  update-scoop.yml
.opencode/: opencode.json
.opencode/agents/: ci-workflows.md  code-reviewer.md  compiller-review.md  test-writer.md
.opencode/commands/: changelog.md
.opencode/plans/: 01-code-deduplication.md  02-architectural-issues.md  03-module-system.md  ADR-0002-scan-sema-solve-pipeline.md  ARCH-COMPARISON.md  NEXT_STEPS.md  STATUS.md  doc-review-improvements.md  fix-06-new-features.md  fix-ansi-windows.md  fix-register-module-eval-order.md  from-import-and-export-reexport.md  parser-typesystem-plan.md  type-representation-v2.md  version-roadmap.md
.run/: zith.run.xml
about/: index.html
about/posts/: 2026-06-13-welcome.html  2026-06-19-next-plans.html  2026-06-19-workflow-ai.html  2026-06-21-vscode-extension.html  2026-06-21-zithc-improvements.html  2026-06-22-zith-lsp-progress.html  2026-06-23-extension-and-ide.html  2026-06-24-introducing-zasm.html  index.json
assets/css/: styles.29203ca9.css  styles.e6c84b2e.css
assets/js/: 07862142.0a972d0d.js  07862142.13640568.js  07862142.3f703bd3.js  093e2a3c.af9f1c1a.js  093e2a3c.f50b3264.js  0a5567ef.1b8e8442.js  0a5567ef.9f63a737.js  0a5567ef.cf5bb8f5.js  0d531dad.2635e2d4.js  0d531dad.c57de38f.js  114f70ad.091f3e72.js  114f70ad.872353c0.js  14eb3368.cc866ed0.js  17896441.7e8e62c6.js  17896441.e3e80515.js  1a16542c.5ca9b010.js  1a16542c.e0ceee67.js  1a16542c.e291cbb7.js  1ae92706.500693ae.js  1ae92706.5794fce7.js  1ae92706.601db68f.js  212fe706.16e84c45.js  212fe706.7cc0ae23.js  212fe706.fc458473.js  2237.587141f8.js  2f77e8f3.28821673.js  2f77e8f3.3ae80b69.js  2f77e8f3.499cf51f.js  3436.33862d46.js  361771dc.42af89a4.js  361771dc.824b84be.js  361771dc.f4a5406e.js  39ddb24d.51d206e1.js  39ddb24d.71b27bc1.js  39ddb24d.f35bbad9.js  3aab7012.eba5593e.js  409c6691.8e5add2f.js  409c6691.d7cc69ae.js  409c6691.e90758d2.js  416.49ae474d.js  (+148 more)
build-asan/: Makefile
build-debug/: Makefile
css/: documentation.css  helios.css  home.css  index.css  playground.css
docs/: 02-module-system.md  03-type-system.md  04-traits-interfaces.md  05-functions.md  06-mutability-bindings.md  07-memory-model.md  08-error-handling.md  09-control-flow.md  10-concurrency.md  11-comptime.md  12-assets.md  13-raw-unsafe.md  14-polymorphism.md  15-macros.md  16-words.md  17-contexts.md  18-c-interop.md  19-project-config.md  20-standard-library.md  21-best-practices.md  Zith-spec-full.md  Zith-spec.md  api-guide.md  impl-status.md  zir-asm.md
docs/advanced/: data-structures.html  generics-deep.html  how-to-use.html  macros.html  metaprogramming.html  overview.html  raw-pointers.html  traits.html  unsafe.html
docs/cli/: build.html  check-command.html  check.html  clean.html  compile.html  docs.html  flags.html  fmt.html  new.html  overview.html  repl.html  run.html  struf-command.html
docs/community/: chat.html  code-of-conduct.html  contributing.html  overview.html
docs/decisions/: ADR-0002-scan-sema-solve-pipeline.md
docs/faq/: overview.html  philosophy.html  rust-comparison.html  security.html  use-cases.html
docs/intro/: installation.html  overview.html  why-zith.html
docs/language/: concurrency.html  contexts.html  control-flow.html  ecs.html  errors.html  functions.html  generics.html  intrinsics.html  memory.html  modules.html  overview.html  ownership.html  packs.html  spec-core-topics.html  syntax.html  types.html  variables.html
docs/project/: overview.html
docs/quickstart/: quickstart.html
docs/reference/: stdlib.html
docsaurus/: docs.sh  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docsaurus/scripts/: open-editor.js
examples/: 01_basics.zith  06_new_features.zith  README.md  hello-world.zith  hello-world.zt  test-marker.zith  working-features.zith
examples/dev/: README.md  small.zith
examples/start/: README.md  hello-world.zith
helios/: index.html
html/: home.html
html/docs/: D-build.html  D-cli.html  D-home.html
html/documentation/: D-NotDone.html  D-advanced-macros.html  (+73 more)
impl/: README.md  main.cpp
include/: README.md
js/: goHome.js  index.js  loadTree.js  loader.js  playground.js  settings.js  windows.js
json/: tree.json
lsp/: document_manager.cpp  document_manager.h  main.cpp  message_handler.cpp  message_handler.h
playground/: index.html
sample/: ZithProject.toml
scripts/: CMakeLists.txt  install-wasm.sh  install.ps1  install.sh  notify.sh  zithc-completion.bash
src/memory/: CMakeLists.txt  arena.cpp  arena.hpp  dyn-array.hpp  flat-map.hpp  flat_map.hpp  optional.hpp  result.hpp  source-file.cpp  source-file.hpp  source-map.cpp  source-map.hpp  span.hpp  string-interner.cpp  string-interner.hpp
test_proj/: ZithProject.toml
tests/: README.md  test-alias.cpp  test-codegen.cpp  test-common.hpp  test-formatter.cpp  test-frontend-context.cpp  test-import.cpp  test-lexer.cpp  test-parser-expr.cpp  test-recovery.cpp  test-scan.cpp  test-sema.cpp  test-struct.cpp  test-telemetry.cpp  test.h  test_diagnostics_new.cpp  test_expand_sema.cpp  test_import.cpp  test_import_system.cpp  test_main.c  test_main.cpp  test_main.wasm  test_parser.cpp  test_project_config.cpp  test_sigs.c  test_sigs.cpp  test_sigs_enosys.cpp  test_stub.c
tools/: batch-convert.py  convert-md.py  convert_md.py  gen-posts-json.py
(+620 files in other folders)
